--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ali Portfolio</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- ===== Navbar ===== -->
@@ -82,3 +82,4 @@
   </script>
 </body>
 </html>
+
