--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <!-- Navigation -->
       <nav>
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="project.html">Projects</a></li>
           <li><a href="services.html">Services</a></li>
@@ -108,3 +108,4 @@
   </script>
 </body>
 </html>
+
