--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
       <!-- Navigation -->
       <nav>
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html" class="active">Projects</a></li>
           <li><a href="services.html">Services</a></li>
@@ -114,3 +114,4 @@
   </script>
 </body>
 </html>
+
