--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
       <!-- Navigation -->
       <nav>
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="project.html">Projects</a></li>
           <li><a href="services.html" class="active">Services</a></li>
@@ -100,3 +100,4 @@
   </script>
 </body>
 </html>
+
