--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#" class="active">About</a></li>
           <li><a href="project.html">Projects</a></li>
           <li><a href="services.html">Services</a></li>
@@ -74,4 +74,5 @@
 
 </body>
 </html>
+
 
