--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
 
         <!-- Netflix Clone -->
         <div class="project-card">
-          <img src="/net.jpg" alt="Netflix Clone Screenshot">
+          <img src="net.jpg" alt="Netflix Clone Screenshot">
           <h2>Netflix Clone</h2>
           <p>
             A responsive Netflix-inspired UI that mimics the look and feel of the original platform. 
@@ -61,7 +61,7 @@
 
         <!-- To-Do List -->
         <div class="project-card">
-          <img src="/todo.jpg" alt="To-Do List Screenshot">
+          <img src="todo.jpg" alt="To-Do List Screenshot">
           <h2>To-Do List</h2>
           <p>
             A task management app that lets users add, delete, and mark tasks as complete. 
@@ -72,7 +72,7 @@
 
         <!-- Weather App -->
         <div class="project-card">
-          <img src="/weather.jpg" alt="Weather App Screenshot">
+          <img src="weather.jpg" alt="Weather App Screenshot">
           <h2>Weather App</h2>
           <p>
             A real-time weather application that fetches data from OpenWeatherMap API. 
@@ -83,7 +83,7 @@
 
         <!-- E-commerce Website -->
         <div class="project-card">
-          <img src="/ecommerce.jpg" alt="E-commerce Website Screenshot">
+          <img src="ecommerce.jpg" alt="E-commerce Website Screenshot">
           <h2>E-commerce Website</h2>
           <p>
             A fully responsive online shop interface with product listings, cart functionality, 
@@ -114,4 +114,5 @@
   </script>
 </body>
 </html>
+
 
