--- a/skill.html
+++ b/skill.html
@@ -47,17 +47,20 @@
       </div>
       <div class="skills-container">
         <div class="skill-box">
-          <img src="html.jpg" alt="HTML">
+         <a href="https://www.google.com/search?q=HTML 5" target="_blank">
+         <img src="html.jpg" alt="HTML"> </a>
           <h3>HTML</h3>
           <p>Structuring web pages with semantic HTML5 to ensure accessibility and SEO-friendly markup.</p>
         </div>
         <div class="skill-box">
-          <img src="css.jpg" alt="CSS">
+          <a href="https://www.google.com/search?q=CSS 3" target="_blank">
+          <img src="css.jpg" alt="CSS"> </a>
           <h3>CSS</h3>
           <p>Designing responsive layouts, animations, and modern styling with Flexbox, Grid, and transitions.</p>
         </div>
         <div class="skill-box">
-          <img src="tailwind.jpg" alt="Tailwind CSS">
+          <a href="https://www.google.com/search?q=TAILWIND CSS" target="_blank">
+          <img src="tailwind.jpg" alt="Tailwind CSS"> </a>
           <h3>Tailwind CSS</h3>
           <p>Rapidly building modern, responsive designs using utility-first CSS framework.</p>
         </div>
@@ -113,4 +116,5 @@
   </script>
 </body>
 </html>
+
 
