--- a/skill.html
+++ b/skill.html
@@ -65,32 +65,38 @@
           <p>Rapidly building modern, responsive designs using utility-first CSS framework.</p>
         </div>
         <div class="skill-box">
-          <img src="java.jpg" alt="JavaScript">
+          <a href="https://www.google.com/search?q=JavaScript" target="_blank">
+          <img src="java.jpg" alt="JavaScript"> </a>
           <h3>JavaScript</h3>
           <p>Adding interactivity, DOM manipulation, and dynamic functionality to web pages.</p>
         </div>
         <div class="skill-box">
-          <img src="react.png" alt="React">
+          <a href="https://www.google.com/search?q=REACT JS" target="_blank">
+          <img src="react.png" alt="React"> </a>
           <h3>React JS</h3>
           <p>Building reusable components, state management, and interactive single-page applications using frameworks like React.</p>
           </div>
           <div class="skill-box">
-            <img src="vue.png" alt="vue">
+            <a href="https://www.google.com/search?q=VUE JS" target="_blank">
+            <img src="vue.png" alt="vue"></a>
             <h3>vue JS</h3>
             <p>Building reusable components, state management, and interactive single-page applications using frameworks like React.</p>
         </div>
         <div class="skill-box">
-          <img src="github.png" alt="GitHub">
+          <a href="https://www.google.com/search?q=GITHUB" target="_blank">
+          <img src="github.png" alt="GitHub"></a>
           <h3>GitHub</h3>
           <p>Version control, collaboration, and project management using Git and GitHub repositories.</p>
         </div>
         <div class="skill-box">
-            <img src="git.png" alt="GitHub">
+          <a href="https://www.google.com/search?q=GIT" target="_blank">
+            <img src="git.png" alt="Git"></a>
             <h3>Git</h3>
             <p>Version control, collaboration, and project management using Git and GitHub repositories.</p>
           </div>
         <div class="skill-box">
-          <img src="figma.png" alt="Figma">
+          <a href="https://www.google.com/search?q=FIGMA" target="_blank">
+          <img src="figma.png" alt="Figma"> </a>
           <h3>Figma</h3>
           <p>Creating UI/UX designs, wireframes, and prototypes to visualize user experiences.</p>
         </div>
@@ -116,5 +122,6 @@
   </script>
 </body>
 </html>
+
 
 
