--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
               <a href="https://www.linkedin.com/in/ali-hassan-mazari-820480335" target="_blank">ALI HASSAN MAZARI</a>
             </p>
             <p><strong>GitHub:</strong> 
-              <a href="https://github.com/ali.dev" target="_blank">ali.dev</a>
+              <a href="https://github.com/mazari1122" target="_blank">Ali Hassan Mazari</a>
             </p>
           </div>
 
@@ -108,4 +108,5 @@
   </script>
 </body>
 </html>
+
 
