--- a/contact.html
+++ b/contact.html
@@ -64,9 +64,10 @@
             <p><strong>LinkedIn:</strong> 
               <a href="https://www.linkedin.com/in/ali-hassan-mazari-820480335" target="_blank">ALI HASSAN MAZARI</a>
             </p>
-           <p><strong>GitHub:</strong> 
-           <a href="https://github.com/mazarii1122"target="_blank">Ali Hassan Mazari</a>
-           </p>
+          <p><strong>GitHub:</strong> 
+  <a href="https://github.com/mazari1122" target="_blank">Ali Hassan Mazari</a>
+</p>
+
           </p>
           </div>
 
@@ -109,6 +110,7 @@
   </script>
 </body>
 </html>
+
 
 
 
