--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
               <a href="https://www.linkedin.com/in/ali-hassan-mazari-820480335" target="_blank">ALI HASSAN MAZARI</a>
             </p>
           <p><strong>GitHub:</strong> 
-  <a href="https://github.com/mazarii1122" target="_blank">Ali Hassan Mazari</a>
+  <a href="https://github.com/Ali-Hassan-Mazarii" target="_blank">Ali Hassan Mazari</a>
 </p>
 
           </p>
@@ -110,6 +110,7 @@
   </script>
 </body>
 </html>
+
 
 
 
