--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="image-block">
-          <img src="certificate.jpg" alt="Front-End Developer Certificate">
+          <img src="crttificate.png" alt="Front-End Developer Certificate">
         </div>
       </div>
     </div>
@@ -74,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
